tests/iperf/isilon_10G/tcp_0/incoming_results.txt
zephram-1# iperf -c 7.7.7.3 -t 60
------------------------------------------------------------
Client connecting to 7.7.7.3, TCP port 5001
TCP window size:   129 KByte (default)
------------------------------------------------------------
[  3] local 7.7.7.2 port 19969 connected with 7.7.7.3 port 5001
[ ID] Interval       Transfer     Bandwidth
[  3]  0.0-60.0 sec  65.5 GBytes  9.37 Gbits/sec
zephram-1#

zephram-1# bash cpu_usage.sh iperf
^C
11.4 13.2 15.9 17.2 19.9 20.8 23.7 24.5 27.4 27.8 30.9 31.0 33.8 33.5 36.2 35.9 39.0 38.2 41.2 40.7 43.3 42.1 45.1 43.7 46.0 44.3 47.1 50.3 48.5 51.4 50.0 52.9 50.9 53.9 52.0 54.7 52.8 55.6 52.8 55.8 53.4 56.2 54.0 57.0 54.4 56.9 54.4 57.5 54.5 57.4 54.9 57.9 55.2 58.3 55.6 58.4 55.7 59.0 56.1 59.2 56.5 59.5 62.4 59.5 62.7 60.0 63.0 60.6 63.2 60.4 63.5 60.4 63.2 60.4 63.7 60.8 64.0 60.7 63.5 61.0 64.0 60.6 63.5 60.4 63.5 60.2 63.2 59.9 62.6 59.8 62.8 59.8 62.7 59.6 62.8 65.3 62.3 65.3 62.5 65.5 62.2 65.0 62.3 65.4 62.5 65.2 61.8 64.8 61.3 64.5 60.9 63.8 61.0
average: 52.8973
zephram-1#

zephram-2# ./ipfwd 1 0.0
[ipfwd] starting
current:  15.417%, error:  15.4%, probability:  0.059%
current:  14.178%, error:  16.7%, probability:  0.059%
current:  15.039%, error:  0.9%, probability:  0.059%
current:  13.831%, error:  1.2%, probability:  0.059%
current:  13.721%, error:  0.1%, probability:  0.059%
current:  13.617%, error:  0.1%, probability:  0.059%
current:  13.525%, error:  0.1%, probability:  0.059%
current:  14.441%, error:  0.9%, probability:  0.059%
current:  14.282%, error:  0.2%, probability:  0.059%
current:  15.137%, error:  0.9%, probability:  0.059%
current:  16.925%, error:  1.8%, probability:  0.059%
current:  15.564%, error:  1.4%, probability:  0.059%
current:  15.314%, error:  0.3%, probability:  0.059%
current:  15.088%, error:  0.2%, probability:  0.059%
current:  16.882%, error:  1.8%, probability:  0.059%
^C
zephram-2#

zephram-2# iperf -s
------------------------------------------------------------
Server listening on TCP port 5001
TCP window size:   128 KByte (default)
------------------------------------------------------------
[  4] local 7.7.7.3 port 5001 connected with 7.7.7.2 port 19969
[ ID] Interval       Transfer     Bandwidth
[  4]  0.0-60.0 sec  65.5 GBytes  9.37 Gbits/sec
^C
zephram-2#

zephram-2# bash cpu_usage.sh iperf
^C
10.6 11.3 13.5 14.7 17.0 17.7 19.9 20.2 22.7 22.5 25.0 25.0 27.1 27.1 29.2 28.4 30.3 29.6 31.7 30.7 33.1 31.9 33.8 32.7 34.8 33.1 34.6 33.2 35.5 34.4 37.1 36.0 38.1 36.6 39.0 41.3 39.8 42.1 40.4 42.5 40.7 43.1 41.3 43.6 41.7 41.1 43.4 41.3 43.3 41.3 43.4 41.1 43.1 41.3 43.6 41.3 43.5 45.1 43.0 45.0 43.3 45.5 43.4 45.8 43.4 45.6 43.8 45.8 43.6 45.8 43.5 45.9 44.1 46.3 43.8 46.0 44.0 46.5 43.9 45.6 43.3 45.3 43.4 45.3 43.1 45.7 43.2 45.7 43.8 46.2 43.8 45.9 43.8 46.3 44.3 46.5 44.4 46.5 43.9 45.9 43.6 45.8 44.0 46.0 43.5 45.6 47.9 45.5 47.2 45.2 47.3
average: 38.9991
zephram-2#
